# ElevenIQ

./: config.py  main.py  pyproject.toml
agent/: graph.py  nodes.py  scrapers.py  state.py  tools.py
data/: football_data.py
